--- a/package.json
+++ b/package.json
@@ -7,8 +7,5 @@
     "type": "git",
     "url": "git://github.com/henrikjoreteg/system-requirements.js.git"
   },
-  "main": "./system-requirements.js",
-  "devDependencies": {
-    "precommit-hook": ""
-  }
+  "main": "./system-requirements.js"
 }
